--- a/packages/app/src/web/mcp-welcome.html
+++ b/packages/app/src/web/mcp-welcome.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/settings-copy.tsx"></script>
+    <script type="module" src="/mcp-welcome.tsx"></script>
   </body>
 </html>
